[gd_scene load_steps=8 format=3 uid="uid://bxw3ddgpa1qeu"]

[ext_resource type="Script" path="res://Script/title.gd" id="1_5wpq2"]
[ext_resource type="Texture2D" uid="uid://crv3538xavf3k" path="res://Art Assets/title/bg.png" id="2_lgood"]
[ext_resource type="Texture2D" uid="uid://b602ux8n3yrj3" path="res://Art Assets/title/illust.PNG" id="3_sxw1y"]
[ext_resource type="Theme" uid="uid://dcvpn3kn2ta0u" path="res://theme.tres" id="4_dmw18"]
[ext_resource type="Texture2D" uid="uid://q4jywr60aahu" path="res://Art Assets/title/ui/title.png" id="4_m3oc3"]
[ext_resource type="PackedScene" uid="uid://cwktou6n3nw5n" path="res://Scene/options.tscn" id="6_8jcrc"]
[ext_resource type="PackedScene" uid="uid://dju6ejgl10ou7" path="res://Scene/pause_settings.tscn" id="8_36ogc"]

[node name="Title" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wpq2")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_lgood")
expand_mode = 1

[node name="illust" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_sxw1y")
expand_mode = 3
stretch_mode = 4

[node name="logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 890.0
offset_top = 141.0
offset_right = 1859.0
offset_bottom = 773.0
pivot_offset = Vector2(484.5, 316)
texture = ExtResource("4_m3oc3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 618.0
offset_top = 894.0
offset_right = 1865.0
offset_bottom = 975.0
pivot_offset = Vector2(623.5, 40.5)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dmw18")
theme_override_constants/h_separation = 53
text = "Play"

[node name="Tutorial" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dmw18")
text = "Tutorial"

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dmw18")
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dmw18")
text = "Quit"

[node name="options" parent="." instance=ExtResource("6_8jcrc")]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 130.0
offset_bottom = 171.0

[node name="Pause Settings" parent="." instance=ExtResource("8_36ogc")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Quit" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="options" to="." method="paused"]
